<resources>
  <string name="app_name">YutownHelper</string>
  <string name="tanmu_str1">来自火星的水友：抢到了&#34;55开&#34;的红包¥111.00元</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>

  <string name="title_activity_fragment_with_view_pager">FragmentWithViewPagerActivity</string>
  <string name="dummy_button">Dummy Button</string>
  <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="sss">注意：控制的图片为资源而不是背景，即android:src="
        @drawable/logo"，而非android:background="@drawable/logo"，我就笨笨地犯了这个低级错误，导致错怪人家scaleType不起作用。程序中动态加载图片也类似，如：应该imgView.setImageResource(R.drawable.*);
        而非imgView.setBackgroundResource(R.drawable.*);"
        android:textSize="22sp</string>
  <string name="test">深夜……\n老公：老婆，饿不？我给你煮碗面啊？\n老婆：不用。\n老公：那我去给你洗点水果吧？\n老婆：不用。\n老公：那我去洗洗衣服拖拖地吧？\n老婆：不用。\n老公：老婆，那你说我干点啥呢？反正我这也没啥事！\n老婆：你就消停的在那儿给我跪到天亮，少特么得瑟，我看你还敢不敢在微信上说你是单身！</string>
  <string name="tv_algorithm_info">所需辅助空间最多：归并排序 所需辅助空间最少：堆排序 平均速度最快：快速排序 不稳定：快速排序，希尔排序，堆排序。</string>
  <string name="tv_origin_list">需要排列的数据：{49, 38, 65, 97, 76, 13, 27, 49, 78, 34, 12, 64, 5, 4, 62, 99, 98, 54, 56, 17, 18, 23, 34, 15, 35, 25, 53, 51}</string>
  <string name="tv_algorithm_insertSort">插入排序：</string>
  <string name="tv_algorithm_shellSort">希尔排序：:</string>
  <string name="tv_algorithm_selectSort">简单选择排序：</string>
  <string name="tv_algorithm_heapSort">堆排序：</string>
  <string name="tv_algorithm_bubbleSort">冒泡排序：</string>
  <string name="tv_algorithm_quickSort">快速排序：</string>
  <string name="tv_algorithm_mergingSort">归并排序：</string>
  <string name="tv_algorithm_radixSort">基数排序：</string>
  <string name="tv_algorithm_result">排序结果：</string>
  <string name="avatar">头像</string>
  <string name="img_show">图片展示</string>
  <string name="rotate_screen_show_lifecycle">旋转屏幕什么周期显示</string>
  <string name="btn1">Btn1</string>
  <string name="btn2">Btn2</string>
  <string name="btn3">Btn3</string>
  <string name="btn4">Btn4</string>
  <string name="btn_screenprint">获取屏幕截图</string>
  <string name="tv_info01">ActionBar显示自定义View</string>
  <string name="long_string">三人向皇城外走去。

    走过崩塌大半的鲸落台时，陈长生忽然停下了脚步。

    “她腹中的孩子究竟是谁的？”

    听到这句话，联想着先前殿里的安静以及徐有容的反应，唐三十六很是震惊，下意识里准备逃走。

    徐有容看了他一眼，说道：“你想多了。”

    陈长生也注意到了唐三十六的神情变化，有些无奈地摇了摇头。

    在这场战争里有很多人死去，包括别样红与无穷碧还有那两位圣光天使。

    陈长生无法忘怀的却是很多人根本想不起来的一个生命。

    那就是牧夫人怀里的孩子。

    在他看来，那个孩子是最无辜的牺牲者。

    或者，是因为这很容易让他想起了自己的身世，

    徐有容明白他的疑问由何而来，解释道白帝一族需要怀胎五年才能生产。

    陈长生怔住了，这才明白为何落落说与自己同龄，看着却是那般小。

    原来她说的年龄是周岁。

    皇城外，熊族族长、士族族长还有些妖族大人物们在等着他们。

    在白帝的视线之外，他们很愿意向陈长生表达自己的善意，修复双方之间的关系。

    只不过终究还是有所顾忌，没过多长时间，人们便散了，皇城前一片清冷。

    陈长生回头看了眼高处如小黑点般的观景台，没有说什么。

    他当然知道这并不是全部的真相。

    在落星山脉破阵的那些夜晚里，他想了很多，已经隐约明白了这一切到底是怎么回事。

    所以当他用南溪斋剑阵破开禁制，那座山峰垮塌，白帝重现于世的时候，他毫不犹豫转身就走。

    看到白帝还活着，只是做确认，但他并不想看见对方，更不想与对方说话。

    因为他有些恶心。

    白帝没有死，也没有昏迷。

    天选大典前那夜，相族族长来到落星山脉，自然感应到了他的真实意志。

    牧夫人知道相族族长是假意投靠自己，也就是从那一夜开始，她开始怀疑白帝。但是她没有改变主意，依然进行着自己的计划，因为她太了解白帝，知道只要他能够置身事外，便会同意她的做法。

    只不过没有谁能想到，陈长生会去了落星山脉，要把白帝救出来。

    那些夜晚的破阵与救人，其实都是逼人。

    逼人的不是富贵，而是坚定与执着。

    最终，白帝被陈长生从那座山脉里逼了出来。

    破阵的方法，商行舟通过徐有容、再通过小德告诉了他的。

    见了众生，白帝便必须做出决断。

    以此而论，他确实是败在了商行舟与陈长生师徒的手下。

    唐三十六想着当时离宫大阵破灭的画面，想着从夜色里走出来的魔君以及天空里的圣光天使，心有余悸说道：“好在最后所有的阴谋都失败了，不然真不知道会迎来怎样的结局。”

    陈长生没有说话，他并不同意唐三十六的看法。

    “谁能说白帝真的败了？魔族少了两个圣光天使，人族同样少了两位神圣领域强者，商行舟受了不轻的伤，相族族长蒙冤被杀，相族就此覆灭，长老会被严重削弱，此后两百年整个妖域再没有谁能够威胁到他，而陈长生与落落之间的关系再也撕扯不开，将来她继位后，妖族再也不用担心来自人族的威胁，而得到了这么多好处，他只需要付出一个妻子的代价。”

    徐有容微微一顿，说道：“还是他不喜欢的。”

    唐三十六忽然觉得风越来越冷了。

    然后他才发现已经走出了城门，来到了岸边的渡口。

    轩辕破和唐家的人以及国教教士们在这里已经等了很长时间。

    河面上呼啸而至的寒风，把人们的呼吸变成了道道霜柱，画面看着有些壮观。

    那场暴雪过后，白帝城的温度始终没有起来。

    风来自河面，实际上来自山那边的西海。

    西风寒冷的如同冰刀，却把人们的脸吹的有些发红发热，就像是最烈的酒。

    陈长生回首望向皇城，想着刚刚过去的这些天，想着这个故事里的人们，想着白帝与牧夫人。

    “我们真的会变成这样的人吗？”

    当年在国教学院的湖边，前些天在汶水城的河畔，他都问过这个问题。

    以前唐三十六都会给出很明确的答案，但今天他沉默了。

    陈长生想起别样红与无穷碧，又想起了另外一个重要的问题。

    “如果你的妻子对你极好，但性情极差，更是个大奸大恶之徒，你会怎么做？”

    那个问题是别样红提出来的。

    轩辕破想着那些天，神情微黯。

    徐有容静静看着他说道：“如果是你，你会怎么办？”

    陈长生很认真地想了想，说道：“我会劝你，阻止你继续行恶，一辈子守在你身边。”

    唐三十六说道：“就像别样红那样？”

    陈长生又想了想，摇头说道：“我做不到。”

    徐有容说道：“我也不想要。”

    唐三十六说道：“如果是你遇到这个问题？”

    徐有容想了会儿，说道：“我会杀了他，再随他一道去死。”

    这个答案尤其是这种随意的感觉，让正准备说话的轩辕破吓的不敢开口。

    “不愧是圣后娘娘教出来的孩子。”

    唐三十六很是感慨，然后话锋一转：“我觉得你们脑子都有问题。”

    陈长生神情微异，问道：“你觉得应该怎样做？”

    “你们都说我像苏离，我做事的风格当然也就是那一派。”

    唐三十六说道：“能怎么办？什么都不办。一起做大恶人岂不快活？”

    陈长生觉得这话好生不妥，正准备说些什么，远处却忽然传来了一阵热闹的礼乐声。

    那乐声很是欢快，还能听着其间不时响起的爆竹，应该是谁家在办喜事。

    发生了这么多事情，牧夫人刚刚死去，在这种时候敢办喜事的人家，或者极愚蠢，或者极有背景。

    今天办喜事的这户人家却不属于这两种。

    之所以没有谁来阻止，是因为这户人家是在办婚事，而主婚人的身份有些特殊。

    轩辕破对唐三十六说道：“主婚人本来请的是院长，现在由我代替。”

    陈长生说道：“我赶时间离开。”

    西荒道殿大主教以及几位红衣主教也前来告辞，准备去参加那场婚事。

    看着这阵势，唐三十六越发不解，心想这到底是怎么回事？

    轩辕破对他解释了这个故事。

    今天成亲的双方，是前些天在皇城前观看天选大典的一对年轻男女。

    那个年轻男子是下城松町的熊族苦力，那个年轻女子是上城的一位贵女。

    按道理来说，身份地位差异极大的他们根本无法认识，更不用说成亲。

    问题在于那天，观景台上陈长生与魔君一场恶战，鲸落台崩落了极大的一块岩石。

    那个熊族苦力在最后关头，护住了那位贵女。

    即便这样，他们还是会死去，就像当时广场上来不及逃走的那数百人一样。

    好在陈长生群剑齐发，把那块巨岩切成了粉末，皇城前落了好美的一场雪。

    没有人死去，感动很快便变成了喜爱，然后超越了很多事情，成就了今天的婚事。

    “他们都说可能与提亲人也是我有关。”

    轩辕破说道：“但我觉得女方家的态度很好，部落里的人们都想多了。”

    唐三十六说道：“如果代表夫家去提亲的人不是你，女方家的态度能好吗？话说你怎么会管这事儿？”

    轩辕破说道：“都是族人，而且胡记的牛肉包子真的很好吃，忘了说，新郎是胡记包子铺的帮工，那天如果不是他冒着生命危险把掌柜和大师傅扔了出来，以后可就吃不着这包子了。”

    唐三十六笑着说道：“太夸张了，什么包子能这么好吃？”

    陈长生没有笑，认真说道：“那个包子真的很好吃。”

    松町胡记包子铺，离天树侍庙不远，离轩辕破的家自然也不远。

    别样红最喜欢他家的包子，可惜的是，到死也没吃上一口热的。

    气氛变得有些低沉。

    唐三十六听陈长生说过别样红临死前的事情，隐约明白了些什么。

    轩辕破与陈长生等人告别。

    陈长生说道：“以后回国教学院了再聚吧。”

    轩辕破点了点头，与主教们向着礼乐声起处走去。

    看着那边不停飞溅的爆竹碎片，陈长生沉默了会儿，说道：“是好事。”

    “是的，世间还是有不少美好的事情。”

    唐三十六说道：“既然如此，谁说我们就一定会成为白帝夫妇那样的人？”

    徐有容淡淡一笑，没有说话。

    随着太阳光线的照射，气温终于升高了些。

    西风渐暖，不再如先前那般冷烈。

    一声鹤唳，白鹤离地而去。

    残雪微颤，一位黑衣少女落在了岸边。

    她不解问道：“为什么这么急着离开？”

    因为陈长生收到了一封信。

    一封来自京都的信。

    京都里有人要结婚了，请他回去参加婚礼，并且要他做主婚人。

    白帝城里的这场婚事陈长生可以不参加，但京都里的那场他必须参加。

    而且他知道无论自己愿不愿意，都逃不过这个差事。

    就像当年那样，无论他愿不愿意，她还是一样上了他的床。</string>
  <string name="title_activity_rx_java_with_mvp_sample">RxJavaWithMvpSampleActivity</string>

</resources>
