<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.chenley.an.yutownhelper.activity.AlgorithmActivity">

    <LinearLayout
        android:id="@+id/activity_algorithm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_algorithm_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f1e540"
            android:padding="8dp"
            android:text="@string/tv_algorithm_info" />

        <TextView
            android:id="@+id/tv_origin_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/tv_origin_list" />

        <TextView
            android:id="@+id/tv_algorithm_insertSort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="#5befb3"
            android:padding="8dp"
            android:text="@string/tv_algorithm_insertSort" />

        <TextView
            android:id="@+id/tv_algorithm_shellSort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="#5befb3"
            android:padding="8dp"
            android:text="@string/tv_algorithm_shellSort" />

        <TextView
            android:id="@+id/tv_algorithm_selectSort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="#5befb3"
            android:padding="8dp"
            android:text="@string/tv_algorithm_selectSort" />

        <TextView
            android:id="@+id/tv_algorithm_heapSort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="#5befb3"
            android:padding="8dp"
            android:text="@string/tv_algorithm_heapSort" />


        <TextView
            android:id="@+id/tv_algorithm_bubbleSort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="#5befb3"
            android:padding="8dp"
            android:text="@string/tv_algorithm_bubbleSort" />

        <TextView
            android:id="@+id/tv_algorithm_quickSort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="#5befb3"
            android:padding="8dp"
            android:text="@string/tv_algorithm_quickSort" />

        <TextView
            android:id="@+id/tv_algorithm_mergingSort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="#5befb3"
            android:padding="8dp"
            android:text="@string/tv_algorithm_mergingSort" />

        <TextView
            android:id="@+id/tv_algorithm_radixSort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="#5befb3"
            android:padding="8dp"
            android:text="@string/tv_algorithm_radixSort" />

        <TextView
            android:id="@+id/tv_algorithm_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="#5befb3"
            android:padding="8dp"
            android:text="@string/tv_algorithm_result" />

    </LinearLayout>
</ScrollView>
